--- a/cards.yml
+++ b/cards.yml
@@ -2,7 +2,7 @@ build:
   version: "3.0"
 
 cards:
-  message: "Welcome to EazyBank cards related local default APIs "
+  message: "Welcome to EazyBank cards related local defaults APIs "
   contactDetails:
     name: "Dragos Lech - Developer"
     email: "dragos@eazybank.com"
