--- a/loans.yml
+++ b/loans.yml
@@ -2,7 +2,7 @@ build:
   version: "3.0"
 
 loans:
-  message: "Welcome to EazyBank loans related local default APIs "
+  message: "Welcome to EazyBank loans related local defaults APIs "
   contactDetails:
     name: "Amaal Grega - Developer"
     email: "amaal@eazybank.com"
